<resources>
    <string name="app_name">TrabalhoFinal</string>
    <string name="action_settings">Settings</string>
    <string name="Clientes">Clientes</string>
    <string name="title_activity_produtos">Produtos</string>
    <string name="Produtos">Produtos</string>
    <string name="Marca">Marca</string>
    <string name="Modelo">Modelo</string>
    <string name="Preço_R$">Preço R$</string>
    <string name="Salvar">Salvar</string>
    <string name="Novo">Novo</string>
    <string name="Alterar">Alterar</string>
    <string name="Nome">Nome:</string>
    <string name="E_Mail">E-Mail:</string>
    <string name="Telefone">Telefone:</string>
    <string name="Data_de_Nascimento">Data de Nascimento:</string>
    <string name="Masculino">Masculino</string>
    <string name="Femino">Femino</string>
    <string name="Cliente">Cliente</string>
    <string name="Lista_de_Desejos">Lista de Desejos</string>
    <string name="Produto">Produto</string>
    <string name="Valor_Minimo_R$">Valor Minimo R$</string>
    <string name="Valor_Máximo_R$">Valor Máximo R$</string>
    <string name="Enviar_E_Mail">Enviar E-Mail</string>
    <string name="Telefonar">Telefonar</string>
</resources>
